ibuilder/tests/not_compile/non_field_struct.stderr
error: only structs with named fields are supported
 --> $DIR/non_field_struct.rs:4:1
  |
4 | struct Foo(i64);
  | ^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `builder` found for struct `Foo` in the current scope
 --> $DIR/non_field_struct.rs:7:10
  |
4 | struct Foo(i64);
  | ---------------- function or associated item `builder` not found for this
...
7 |     Foo::builder();
  |          ^^^^^^^ function or associated item not found in `Foo`
