ibuilder/tests/not_compile/non_field_struct.rs
use ibuilder::ibuilder;

#[derive(ibuilder)]
struct Foo(i64);

fn main() {
    Foo::builder();
}
